--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>Welcome to Passerby</h1>
+<p>Need something picked up?</p>
+<p>No car? Too far?</p> 
+<p>Passerby is here to help!</p>
+
+<%= link_to 'Log-In', new_user_session_path %>
+<%= link_to 'Sign-Up', new_user_registration_path %>
