--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Item</h1>
-<%= form_with(model: @profile, url: update_path, local: true) do |form| %>
+<%= form_with(model: @profile, url: profile_path, local: true) do |form| %>
   <% if @profile.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this photo from being saved:</h2>
