--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,22 @@
   </head>
 
   <body>
-    <%= yield %>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    <%= yield %>
+
+    <%= link_to 'Sign-Up', new_user_registration_path %><br>
+    <%= link_to 'Log-In', new_user_session_path %><br>
+    <%= link_to 'Log-Out', destroy_user_session_path, method: :delete %><br>
+
+    <%= link_to 'Profiles Index', profiles_path %><br>
+    <%= link_to 'Create Profile', new_profile_path %><br>
+    <%= link_to 'Show Profile', profile_path(current_user) %><br>
+
+
+    <%= link_to 'Pickup Requests Index', pickup_requests_path %><br>
+    <%= link_to 'Create Pickup Request', new_pickup_request_path %>
+    <%#= link_to 'Show Pickup Request', pickup_request_path %><br>
+
   </body>
 </html>
