--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,18 @@
     <p class="alert"><%= alert %></p>
     <%= yield %>
 
-    <%= link_to 'Sign-Up', new_user_registration_path %><br>
-    <%= link_to 'Log-In', new_user_session_path %><br>
-    <%= link_to 'Log-Out', destroy_user_session_path, method: :delete %><br>
-
-    <%= link_to 'Profiles Index', profiles_path %><br>
-    <%= link_to 'Create Profile', new_profile_path %><br>
-    <%= link_to 'Show Profile', profile_path(current_user) %><br>
-
-
-    <%= link_to 'Pickup Requests Index', pickup_requests_path %><br>
-    <%= link_to 'Create Pickup Request', new_pickup_request_path %>
-    <%#= link_to 'Show Pickup Request', pickup_request_path %><br>
-
+    <% if user_signed_in?%>
+        <%= link_to 'Log-Out', destroy_user_session_path, method: :delete %><br>
+        <%= link_to 'Profiles Index', profiles_path %><br>
+        <%= link_to 'Create Profile', new_profile_path %><br>
+        <%= link_to 'Show Profile', profile_path(current_user.profile) %><br>
+        <%= link_to 'Pickup Requests Index', pickup_requests_path %><br>
+        <%= link_to 'Create Pickup Request', new_pickup_request_path %>
+        <%#= link_to 'Show Pickup Request', pickup_request_path %><br>
+    <% else %>
+        <%= link_to 'Sign-Up', new_user_registration_path %><br>
+        <%= link_to 'Log-In', new_user_session_path %><br>
+    <% end %>
+    
   </body>
 </html>
