--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -31,7 +31,7 @@
 
 <div class="field">
     <%= form.label :profile_photo %>
-    <%= form.text_field :image_data %>
+    <%= form.file_field :image_data %>
 </div>
 
 <div class="field">
