Add image upload feature

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,8 +2,8 @@
 
 <p>
   <strong>Image data:</strong>
-  <%= image_tag @profile.image_data, width: 200 %>
-</p>
+    <%= image_tag @profile.image_url(:original) %>
+
 
 <p>
   <strong>Name:</strong>
