--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <%= link_to 'Log-Out', destroy_user_session_path, method: :delete %><br>
         <%= link_to 'Profiles Index', profiles_path %><br>
         <%= link_to 'Create Profile', new_profile_path %><br>
-        <%= link_to 'Show Profile', profile_path(current_user.profile) %><br>
+        <%#= link_to 'Show Profile', profile_path(current_user.profile) %><br>
         <%= link_to 'Pickup Requests Index', pickup_requests_path %><br>
         <%= link_to 'Create Pickup Request', new_pickup_request_path %>
         <%#= link_to 'Show Pickup Request', pickup_request_path %><br>
