--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -31,8 +31,8 @@
 
 <div class="field">
     <%= form.label :image %>
-    <%#= form.hidden_field :image, value: profile.cached_image_data %>
-    <%= form.text_field :image_data %>
+    <%#= form.hidden_field :image, value: f.object.cached_image_data %>
+    <%= form.file_field :image %>
 </div>
 
 <div class="field">
