--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -6,7 +6,7 @@
 <br>
     <%= profile.first_name %>
     <%= profile.last_name %><br>
-    <%= image_tag profile.image_url(:original) unless profile.image.blank? %>
+    <%= image_tag profile.image_url(:thumb) unless profile.image.blank? %>
 
     <%= link_to 'Show', profile_path(profile) %><br>
     <%= link_to 'Edit', edit_profile_path(profile) %><br>
