--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Image data:</strong>
-    <%= image_tag @profile.image_url(:original) %>
+    <%= image_tag @profile.image_url(:medium) %>
 
 
 <p>
