--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Image data:</strong>
+  <strong>Profile Image:</strong><br>
     <%= image_tag @profile.image_url(:medium) %>
 
 
