--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,25 +6,18 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+
   </head>
 
   <body>
+
     <%# <p class="notice"><%= notice %></p>
     <%# <p class="alert"><%= alert %></p> 
+    <%= render 'partials/navbar' %>
+    <div class="container">
     <%= yield %>
-
-    <% if user_signed_in?%>
-        <%= link_to 'Log-Out', destroy_user_session_path, method: :delete %><br>
-        <%= link_to 'Profiles Index', profiles_path %><br>
-        <%= link_to 'Create Profile', new_profile_path %><br>
-        <%#= link_to 'Show Profile', profile_path(current_user.profile) %><br>
-        <%= link_to 'Pickup Requests Index', pickup_requests_path %><br>
-        <%= link_to 'Create Pickup Request', new_pickup_request_path %>
-        <%#= link_to 'Show Pickup Request', pickup_request_path %><br>
-    <% else %>
-        <%= link_to 'Sign-Up', new_user_registration_path %><br>
-        <%= link_to 'Log-In', new_user_session_path %><br>
-    <% end %>
+    </div>
     
   </body>
 </html>
