--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="nav">
 <div class="navitem">
-    <a href="<%= root_path %>"> <%= image_tag 'Logo.svg' %></a>
+    <a href="<%= root_path %>"> <%# image_tag 'Logo.svg' %></a>
 </div>
 
 <div class="navitem">
