--- a/app/views/pickup_requests/new.html.erb
+++ b/app/views/pickup_requests/new.html.erb
@@ -8,8 +8,9 @@
 <br>
 
   <div class="field">
-    <%= form.label :item_photo %>
-    <%= form.text_field :image_data %>
+    <%= form.label :image %>
+    <%#= form.hidden_field :image, value: f.object.cached_image_data %>
+    <%= form.file_field :image %>
   </div>
 
   <div class="field">
