--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,34 +1,34 @@
 <div class="nav">
 <div class="navitem">
-    <a href="<%= root_path %>"> <%# image_tag 'Logo.svg' %></a>
+<%= link_to root_path do %>
+    <%= image_tag 'passerby-logo.svg' %>
+<% end %>
 </div>
 
 <div class="navitem">
     <% if user_signed_in?%>
         <div class="nav-link">
-        <%= link_to 'Profiles Index', profiles_path %>
+            <%= link_to 'Profiles Index', profiles_path %>
         </div>
         <div class="nav-link">
-        <%= link_to 'Create Profile', new_profile_path %>
+            <%= link_to 'Create Profile', new_profile_path %>
         </div>
-        <%#= link_to 'Show Profile', profile_path(current_user.profile) %>
-    <div class="nav-link">
-        <%= link_to 'Pickup Requests Index', pickup_requests_path %>
-    </div>
-    <div class="nav-link">
-        <%= link_to 'Create Pickup Request', new_pickup_request_path %>
-    </div>
         <div class="nav-link">
-        <%= link_to 'Log-Out', destroy_user_session_path, method: :delete %>
+            <%= link_to 'Pickup Requests Index', pickup_requests_path %>
         </div>
-        <%#= link_to 'Show Pickup Request', pickup_request_path %>
+        <div class="nav-link">
+            <%= link_to 'Create Pickup Request', new_pickup_request_path %>
+        </div>
+        <div class="nav-link">
+            <%= link_to 'Log-Out', destroy_user_session_path, method: :delete %>
+        </div>
     <% else %>
-    <div class="nav-link">
-        <%= link_to 'Sign-Up', new_user_registration_path %>
-    </div>
-    <div class="nav-link">
-        <%= link_to 'Log-In', new_user_session_path %>
-    </div>
+        <div class="nav-link">
+            <%= link_to 'Sign-Up', new_user_registration_path %>
+        </div>
+        <div class="nav-link">
+            <%= link_to 'Log-In', new_user_session_path %>
+        </div>
     <% end %>
 </div>
 </div>
