--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -16,8 +16,8 @@
 </p>
 
 <p>
-  <strong>Address:</strong>
-  <%= @profile.full_address %>
+  <strong>Location:</strong>
+  <%= @profile.partial_address %>
 </p>
 
 <%= google_map_image_tag(@profile) %>
