--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,14 +27,12 @@ html, body {
     color: var(--main-color-one);
     font-family: var(--main-font);
     font-size: 18px;
-    font-weight: normal;
 }
 
 .nav {
     display: flex;
-    width: 100%;
+    // width: 100%;
     margin: auto;
-    flex-direction: row;
     height: 140px;
     color: black;
     justify-content: space-between;
@@ -65,8 +63,9 @@ html, body {
 
 .container {
     overflow: hidden;
-    width: 100vw;   
+    max-width: 100vw;   
     height: 100%;
+    margin: 80px
     // display: flex;
     // flex-direction: column;
     // justify-content: flex-start;
