--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,7 +19,10 @@
     box-sizing: border-box;
     --main-color-one: #4F4F4F;
     --main-color-two: #EAEAEA;
+    --main-color-three: #2D9CDB;
     --main-font: 'Open Sans', sans-serif;
+    --main-heading-font: 'Crimson Text', serif;
+
 }
 html, body {
     background-color: var(--main-color-two);
@@ -51,7 +54,7 @@ html, body {
                 color: purple;
             }
             &:hover {
-                color: #2D9CDB;
+                color: var(--main-color-three);
             }
         }
         .nav-link {
@@ -61,13 +64,62 @@ html, body {
     }
 }
 
+h1 {
+    text-align: center;
+    font-family: var(--main-heading-font);
+    font-size: 60px;
+    span {
+        color: var(--main-color-three);
+    }
+}
+
+.welcome {
+    text-align: center;
+    margin-bottom: 60px;
+}
+
 .container {
     overflow: hidden;
     max-width: 100vw;   
     height: 100%;
-    margin: 80px
+    margin: 20px 200px; 
     // display: flex;
     // flex-direction: column;
     // justify-content: flex-start;
     // align-items: center;
 }
+
+.btn {
+    display: block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    background-color: var(--main-color-three);
+    border-color: var(--main-color-three);
+    
+    a {
+        color: white;
+        text-decoration: none;
+        font-weight: bold;
+    }
+  }
+
+  .show-request {
+      display: flex;
+      flex-wrap: wrap;
+
+      .show-image {
+        padding-right: 20px;
+      }
+  }
