--- a/app/views/pickup_requests/new.html.erb
+++ b/app/views/pickup_requests/new.html.erb
@@ -4,4 +4,6 @@
 
 <br>
 <%#= link_to 'View Pick-Up Request', pickup_request_path %><br>
-<%= link_to 'View All Pick-Up Requests', pickup_requests_path %>
+  <div type="button" class="btn">
+    <%= link_to 'View All Pick-Up Requests', pickup_requests_path %>
+  </div>
