--- a/app/views/pickup_requests/show.html.erb
+++ b/app/views/pickup_requests/show.html.erb
@@ -33,7 +33,7 @@
 <%#= google_map_image_tag_partial(@pickup_request.delivery_address) %>
 
   <div type="button" class="btn">
-    <%= link_to 'Accept Request', conversations_path, method: :create %>
+    <%= link_to 'Accept Request', conversations_path({ :pickup_request_id => @pickup_request} ), method: :create %> 
   </div>
   <br>
   <div type="button" class="btn">
