--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -67,12 +67,17 @@ html, body {
 h1 {
     text-align: center;
     font-family: var(--main-heading-font);
-    font-size: 60px;
+    font-size: 70px;
     span {
         color: var(--main-color-three);
     }
 }
 
+h2 {
+    text-align: center;
+    font-family: var(--main-heading-font);
+    font-size: 50px;
+}
 .welcome {
     text-align: center;
     margin-bottom: 60px;
@@ -82,7 +87,7 @@ h1 {
     overflow: hidden;
     max-width: 100vw;   
     height: 100%;
-    margin: 20px 200px; 
+    margin: 0px 200px; 
     // display: flex;
     // flex-direction: column;
     // justify-content: flex-start;
@@ -130,6 +135,14 @@ h1 {
       flex-wrap: wrap;
 
       .pickup-card {
-          width: 280px;
+          width: 250px;
+      }
+  }
+
+  .field {
+    //   height: 80px;
+      .form-field {
+          height: 30px;
+          width: 90%;
       }
   }
