--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @profile, local: true) do |form| %>
+<%= form_with(model: @profile, local: true, class: "form",) do |form| %>
   <% if @profile.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@profile.errors.count, "error") %> prohibited this photo from being saved:</h2>
@@ -13,19 +13,19 @@
 
   <div class="field">
     <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
+    <%= form.text_field :first_name, :class => "form-field" %>
   </div>
 <br>
 
   <div class="field">
     <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
+    <%= form.text_field :last_name, :class => "form-field" %>
   </div>
 <br>
 
   <div class="field">
-    <%= form.label :bio %>
-    <%= form.text_field :bio %>
+    <%= form.label :bio %><br>
+    <%= form.text_area :bio, :class => "form-field" %>
   </div>
 <br>
 
@@ -34,36 +34,36 @@
     <%#= form.hidden_field :image, value: f.object.cached_image_data %>
     <%= form.file_field :image %>
 </div>
-
+<br>
 <div class="field">
     <%= form.label :address_line_one %>
-    <%= form.text_field :address_line_one %>
+    <%= form.text_field :address_line_one, :class => "form-field" %>
 </div>
-
+<br>
 <div class="field">
     <%= form.label :address_line_two %>
-    <%= form.text_field :address_line_two %>
+    <%= form.text_field :address_line_two, :class => "form-field" %>
+</div>
+<br>
+<div class="field">
+    <%= form.label :city %><br>
+    <%= form.text_field :city, :class => "form-field" %>
+</div>
+<br>
+<div class="field">
+    <%= form.label :state %><br>
+    <%= form.text_field :state, :class => "form-field" %>
 </div>
 
+<br>
 <div class="field">
-    <%= form.label :city %>
-    <%= form.text_field :city %>
+    <%= form.label :postcode %><br>
+    <%= form.text_field :postcode, :class => "form-field" %>
 </div>
-
+<br>
 <div class="field">
-    <%= form.label :state %>
-    <%= form.text_field :state %>
-</div>
-
-
-<div class="field">
-    <%= form.label :postcode %>
-    <%= form.text_field :postcode %>
-</div>
-
-<div class="field">
-    <%= form.label :country %>
-    <%= form.country_select :country_code, priority_countries: ["AU"] %>
+    <%= form.label :country %><br>
+    <%= form.country_select :country_code, priority_countries: ["AU"], :class => "form-field" %>
 </div>
 
 <br>
