Add method so current user cannot accept their own request

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -26,6 +26,6 @@
       <%= link_to 'Edit', edit_profile_path(@profile) %><br>
 <% end %>
 
-<% @user.pickup_request.select('pickup_request.*, user_to_pickup.accepted').each do |i| %>
-  <p><%= i.accepted %></p>
-<% end %>
+<%# @user.pickup_request.select('pickup_request.*, user_to_pickup.accepted').each do |i| %>
+  <p><%#= i.accepted %></p>
+<%# end %>
