Add attempt to have accept request button work properly

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -29,3 +29,8 @@
 <%# @user.pickup_request.select('pickup_request.*, user_to_pickup.accepted').each do |i| %>
   <p><%#= i.accepted %></p>
 <%# end %>
+
+  <%#= @profile.accepted_requests %>
+  <%# @profile.user.pickup_requests.user_to_pickups.each do |test|%>
+  <%#= test.accepted %>
+<%# end %>
