--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,9 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <h2>Profiles</h2>
-
+<div class="profile">
 <% @profiles.each do |profile| %>
 <br>
+<div class="profile-card">
     <%= profile.first_name %>
     <%= profile.last_name %><br>
     <%= image_tag profile.image_url(:thumb) unless profile.image.blank? %><br>
@@ -17,6 +18,6 @@
     <% if policy(profile).destroy? %>
         <%= link_to 'Destroy', profile_path(profile), method: :delete, data: { confirm: 'Are you sure?' } %><br>
     <% end %>
-
+</div>
 <% end %><br>
-
+</div>
