--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -10,9 +10,13 @@
         <div class="nav-link">
             <%= link_to 'Profiles Index', profiles_path %>
         </div>
-        <div class="nav-link">
-            <%= link_to 'Create Profile', new_profile_path %>
-        </div>
+    <% if current_user.profile.present? %>
+        <div><%= link_to 'My Profile', current_user.profile %></div>
+        
+    <% else %>
+        <div><%= link_to 'Create Profile', new_profile_path %></div>
+    <% end %>
+
         <div class="nav-link">
             <%= link_to 'Log-Out', destroy_user_session_path, method: :delete %>
         </div>
