Add pickup request status to profile

--- a/app/views/pickup_requests/show.html.erb
+++ b/app/views/pickup_requests/show.html.erb
@@ -34,7 +34,7 @@
     </p>
 
     <p>
-      <strong>User:</strong>
+      <strong>Posted by:</strong>
       <%= link_to @pickup_request.user.profile.full_name, @pickup_request.user.profile %><br>
     </p>
   </div>
@@ -64,3 +64,4 @@
       <%= link_to 'Edit Request', edit_pickup_request_path %><br>
     </div>
     <% end %>
+    <br>
