--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -170,3 +170,8 @@ h2 {
             }
         }
     
+.profile-page {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
