--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -30,46 +30,50 @@
     <%= google_map_image_tag(@profile) %><br>
   </div>
 
-  <div class="request-info">
-    <h3>My Pickup Requests </h3>
-    <% if current_user == @profile.user %>
-        <% @pickup_requests.each do |request|%>
-        
+<div class="request-info">
+  <% if current_user == @profile.user %>
+  <h3>My Pickup Requests </h3>
+    <% @pickup_requests.each do |request|%>
         <p><br><strong><%= request.item_name %></strong></p>
         <p><strong>Pickup Location:</strong> <%= request.pickup_address.titleize %></p>
-
-          <% if request.user_to_pickup.nil? %>
-            <p><strong>Status:</strong> Not Accepted</p>
-          <% else %> 
-            <p><% request.user_to_pickup.accepted %><strong>Status:</strong> Accepted </p>
-            <p><strong>Accepted by: </strong>
-            <%= link_to request.user_to_pickup.user.profile.full_name, profile_path(request) %><br>
-          <% end %>
-        
-        <%#= render 'pickup_requests/charge_form', pickup_request: request, user: current_user %><br>
+      <% if request.user_to_pickup.nil? %>
+        <p><strong>Status:</strong> Not Accepted</p>
+      <% else %> 
+        <p>
+          <% request.user_to_pickup.accepted %><strong>Status:</strong> Accepted 
+        </p>
+        <p>
+          <strong>Accepted by: </strong><%= link_to request.user_to_pickup.user.profile.full_name, profile_path(request) %>
+          <br>
+        </p>
 
         <%= form_tag charge_pickup_request_path(request) do %>
-              <article>
-                <% if flash[:error].present? %>
-                  <div id="error_explanation">
-                    <p><%= flash[:error] %></p>
-                  </div>
-                <% end %>
-              </article>
+            <article>
+              <% if flash[:error].present? %>
+                <div id="error_explanation">
+                  <p><%= flash[:error] %></p>
+                </div>
+              <% end %>
+            </article>
 
-              <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
               data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-              data-description="<%= request.description %>"
+              data-description="Payment for: <%= request.user_to_pickup.user.profile.full_name %>"
               data-amount="<%= request.payment_amount %>"
               data-currency="AUD"
+              data-label="Pay <%= request.user_to_pickup.user.profile.full_name %>"
               data-email=<%= request.user.email %>
-              data-locale="auto"></script>
+              data-locale="auto">
+            </script>
         <% end %>
-        <br>
-        <%= link_to 'View Request', pickup_request_path(request) %><br>
+        <%#= render 'pickup_requests/charge_form', pickup_request: request, user: current_user %>
+      <% end %>
 
-        <% end %>
+     <br>
+
+     <%= link_to 'View Request', pickup_request_path(request) %><br>
+
     <% end %>
+  <% end %>
 
-  </div>
 </div>
