--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -180,8 +180,8 @@ h2 {
         flex-direction: column;
         .request-info-card {
         margin-bottom: 20px;
-        padding: 5px;
-        background-color: white;
+        padding: 10px;
+        // background-color: white;
         border: var(--main-color-three) solid 4px;
 
         }
