--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,15 +35,17 @@ html, body {
 
 .nav {
     display: flex;
+    flex-wrap: wrap;
     // width: 100%;
     margin: auto;
-    height: 140px;
+    // height: 140px;
     color: black;
     justify-content: space-between;
     align-items: center;
-
+    
     .navitem {
         display: flex;
+        justify-self: center;
         justify-content: space-between;
         align-items: center;
         padding: 0 2vw;
