--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="nav">
-<div class="navitem">
+<div class="navitem test">
 <%= link_to root_path do %>
     <%= image_tag 'passerby-logo.svg' %>
 <% end %>
